test/log/load/vldcb7in0_v_u16_m.txt
vldcb7in0_v_u16_m.c:16:2: warning: multi-line comment [-Wcomment]
   16 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vldcb7in0_v_u16_m.c:18:44: warning: backslash and newline separated by space
   18 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vldcb7in0_v_u16_m.c:37:6: warning: no previous prototype for 'vldcb7in0_v_u16_m_golden' [-Wmissing-prototypes]
   37 | void vldcb7in0_v_u16_m_golden(uint64_t *mask,uint16_t maskoff[7][32],uint16_t *base,uint32_t imm,uint16_t exp_result[][ELE_NUM]) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~
vldcb7in0_v_u16_m.c: In function 'vldcb7in0_v_u16_m_golden':
vldcb7in0_v_u16_m.c:37:41: warning: unused parameter 'mask' [-Wunused-parameter]
   37 | void vldcb7in0_v_u16_m_golden(uint64_t *mask,uint16_t maskoff[7][32],uint16_t *base,uint32_t imm,uint16_t exp_result[][ELE_NUM]) {
      |                               ~~~~~~~~~~^~~~
vldcb7in0_v_u16_m.c:37:55: warning: unused parameter 'maskoff' [-Wunused-parameter]
   37 | void vldcb7in0_v_u16_m_golden(uint64_t *mask,uint16_t maskoff[7][32],uint16_t *base,uint32_t imm,uint16_t exp_result[][ELE_NUM]) {
      |                                              ~~~~~~~~~^~~~~~~~~~~~~~
vldcb7in0_v_u16_m.c:37:94: warning: unused parameter 'imm' [-Wunused-parameter]
   37 | void vldcb7in0_v_u16_m_golden(uint64_t *mask,uint16_t maskoff[7][32],uint16_t *base,uint32_t imm,uint16_t exp_result[][ELE_NUM]) {
      |                                                                                     ~~~~~~~~~^~~
vldcb7in0_v_u16_m.c: In function 'main':
vldcb7in0_v_u16_m.c:62:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   62 |     data_init_bool(mask, exp_mask, 32, 0xffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vldcb7in0_v_u16_m.c:53:14: warning: variable 'imm' set but not used [-Wunused-but-set-variable]
   53 |     uint32_t imm;
      |              ^~~
vldcb7in0_v_u16_m.c:62:5: warning: 'mask' is used uninitialized in this function [-Wuninitialized]
   62 |     data_init_bool(mask, exp_mask, 32, 0xffff);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
vldcb7in0_v_u16_m.c:28:20: warning: iteration 7 invokes undefined behavior [-Waggressive-loop-optimizations]
   28 |        a.val[i][j] = random(threshold); \
      |                    ^
vldcb7in0_v_u16_m.c:63:5: note: in expansion of macro 'data_init_matrix'
   63 |     data_init_matrix(maskoff, exp_maskoff, 32, 7, 0xffff);
      |     ^~~~~~~~~~~~~~~~
vldcb7in0_v_u16_m.c:26:4: note: within this loop
   26 |    for(int i = 0; i < m; i++) { \
      |    ^~~
vldcb7in0_v_u16_m.c:63:5: note: in expansion of macro 'data_init_matrix'
   63 |     data_init_matrix(maskoff, exp_maskoff, 32, 7, 0xffff);
      |     ^~~~~~~~~~~~~~~~
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/bin/../lib/gcc/riscv32-rivai-elf/10.2.1/../../../../riscv32-rivai-elf/bin/ld: /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vldcb7in0_v_u16_m.o: in function `main':
/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test/vldcb7in0_v_u16_m.c:62: undefined reference to `data_init_bool'
collect2: error: ld returned 1 exit status
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vldcb7in0_v_u16_m.elf] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vldcb7in0_v_u16_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vldcb7in0_v_u16_m.c
Linking....
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/bin/riscv32-rivai-elf-gcc -o /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vldcb7in0_v_u16_m.elf /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vldcb7in0_v_u16_m.o -T/opt/analog/riscv/1.0.1/Riscv/software/target/bare/link.ld -nostartfiles -static -nostdlib -L/opt/analog/riscv/1.0.1/Riscv/software/target/common/lib/ -ldsp -lbare -lm -lc -lgcc
Makefile:85: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vldcb7in0_v_u16_m.elf' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed